2008-02-25  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* Binding.cs: Actually implement 2.0 NullValue property. Also
	when changing the formatting related properties, only update the state
	if formatting_enabled is true (we don't mind otherwise).

2008-02-25  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStrip.cs: Don't raise ItemClicked for disabled items.
	[Fixes bug #364486]

2008-02-25  Ivan N. Zlatev  <contact@i-nz.net>

	* GridEntry.cs: Use the PropertyDescriptor.PropertyType instead 
	of GetType on the current value as it uses reflection to 
	determine the type. This fixes the case where the new value is 
	null. 

2008-02-25  Ivan N. Zlatev  <contact@i-nz.net>

	* PropertyGridView.cs: Limit mousewheel scrolling to not scroll
	past the view.

2008-02-24  Luke Page  <luke.a.page@gmail.com>

	* Line.cs, TextControl.cs: Implement offset x and y so that a
	document doesn't have to begin  at (0,0) on the viewpoint.
	* TextBox.cs, TextBoxBase.cs: RightToLeft switches the scroll
	bars and switches the text alignment (and therefore is now
	implemented for textbox). Fixes #321383.

2008-02-23  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* Binding.cs: Actually implement 2.0 FormatString and FormatInfo
	properties. Also when changing FormattingEnabled update the control
	property -as .Net does-.

2008-02-22  Carlos Alberto Cortez <calberto.cortez@ŋmail.com>

	* ControlBindingsCollection.cs: Add the missing 2.0 Add overloads.
	* Binding.cs: Add stubs for the overloads of the Add method in
	CBCollection.

2008-02-22  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* Binding.cs: PullData () returns a false value if we got an exception.
	Also when validating the control and we get an error, instead of
	setting the value of the previous one, cancel the event (tested in 1.1
	and 2.0).

2008-02-22  Jonathan Pobst  <monkey@jpobst.com>

	* TreeView.cs: Make selected_node and highlighted_node internal.