@@ -1,3 +1,9 @@
+2008-02-26  Jonathan Pobst  <monkey@jpobst.com>
+
+	* Application.cs: Apply patch from Justin Cherniak to match
+	MS better for ProductName, ProductVersion, and CompanyName.
+	[Fixes bug #361709]
+
 2008-02-25  Carlos Alberto Cortez <calberto.cortez@gmail.com>
 
 	* Binding.cs: Actually implement 2.0 NullValue property. Also
